--- a/Peppermint/Base.lproj/Main.storyboard
+++ b/Peppermint/Base.lproj/Main.storyboard
@@ -1265,28 +1265,34 @@ Version 1.0.0</string>
                                         </constraints>
                                         <state key="normal" image="icon_back"/>
                                         <connections>
-                                            <action selector="slideMenuTouchDown:" destination="NAA-3N-hVr" eventType="touchDown" id="bq2-LU-ysO"/>
-                                            <action selector="slideMenuTouchUp:" destination="NAA-3N-hVr" eventType="touchUpOutside" id="8ht-dv-qHl"/>
-                                            <action selector="slideMenuValidAction:" destination="NAA-3N-hVr" eventType="touchUpInside" id="rv3-Ev-G1h"/>
+                                            <action selector="backButtonTouchDown:" destination="NAA-3N-hVr" eventType="touchDown" id="0Zz-lq-bY8"/>
+                                            <action selector="backButtonTouchUp:" destination="NAA-3N-hVr" eventType="touchUpOutside" id="ctx-Nb-Auo"/>
+                                            <action selector="backButtonValidAction:" destination="NAA-3N-hVr" eventType="touchUpInside" id="3y7-fD-XBN"/>
                                         </connections>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="bordered_logo" translatesAutoresizingMaskIntoConstraints="NO" id="c98-TQ-lrM">
-                                        <rect key="frame" x="42" y="24" width="34" height="34"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar_white_empty" translatesAutoresizingMaskIntoConstraints="NO" id="c98-TQ-lrM">
+                                        <rect key="frame" x="36" y="23" width="35" height="35"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="35" id="uTc-wC-aIP"/>
+                                        </constraints>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.3411764706" green="0.72941176470000002" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="7tN-X6-rqR" secondAttribute="trailing" id="0ez-ti-4ID"/>
                                     <constraint firstItem="7tN-X6-rqR" firstAttribute="top" secondItem="Vfi-st-4Ne" secondAttribute="top" constant="18" id="9yt-Q5-oXF"/>
+                                    <constraint firstItem="c98-TQ-lrM" firstAttribute="leading" secondItem="0zV-MH-Pcm" secondAttribute="trailing" constant="-4" id="BHP-xb-7wQ"/>
                                     <constraint firstItem="0zV-MH-Pcm" firstAttribute="top" secondItem="Vfi-st-4Ne" secondAttribute="top" constant="24" id="Bvq-N3-HHT"/>
                                     <constraint firstAttribute="height" constant="64" id="NLk-Rt-sDU"/>
+                                    <constraint firstAttribute="bottom" secondItem="c98-TQ-lrM" secondAttribute="bottom" constant="6" id="Zd0-mz-UbV"/>
+                                    <constraint firstItem="c98-TQ-lrM" firstAttribute="top" secondItem="Vfi-st-4Ne" secondAttribute="top" constant="23" id="bLr-aW-kkX"/>
                                     <constraint firstItem="7tN-X6-rqR" firstAttribute="leading" secondItem="Vfi-st-4Ne" secondAttribute="leading" id="eDJ-Jd-KwZ"/>
                                     <constraint firstAttribute="bottom" secondItem="7tN-X6-rqR" secondAttribute="bottom" id="j3d-ls-eW7"/>
                                     <constraint firstItem="0zV-MH-Pcm" firstAttribute="leading" secondItem="Vfi-st-4Ne" secondAttribute="leading" id="svx-g7-9g9"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Ptb-mZ-wF6">
-                                <rect key="frame" x="0.0" y="64" width="414" height="672"/>
+                                <rect key="frame" x="0.0" y="64" width="414" height="615"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
@@ -1294,15 +1300,36 @@ Version 1.0.0</string>
                                     <outlet property="delegate" destination="NAA-3N-hVr" id="44a-Po-kDB"/>
                                 </connections>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_Record a Message" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tec-iN-Ad0">
+                                <rect key="frame" x="-1" y="681" width="416" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="56" id="KPP-Nz-v4X"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_mic_2" translatesAutoresizingMaskIntoConstraints="NO" id="9rV-hA-tP2">
+                                <rect key="frame" x="359" y="679" width="56" height="56"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="56" id="dVT-Hm-WGc"/>
+                                    <constraint firstAttribute="height" constant="56" id="dbX-9l-aGR"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="9rV-hA-tP2" secondAttribute="trailing" constant="-1" id="0km-Ut-P6h"/>
                             <constraint firstItem="Ptb-mZ-wF6" firstAttribute="top" secondItem="Vfi-st-4Ne" secondAttribute="bottom" id="8Ve-l2-PiD"/>
                             <constraint firstItem="Ptb-mZ-wF6" firstAttribute="leading" secondItem="4qC-EC-dhR" secondAttribute="leading" id="BQa-IK-WFf"/>
                             <constraint firstAttribute="trailing" secondItem="Vfi-st-4Ne" secondAttribute="trailing" id="DnU-Ya-ptS"/>
+                            <constraint firstAttribute="bottom" secondItem="Tec-iN-Ad0" secondAttribute="bottom" constant="-1" id="Hma-ff-kzB"/>
+                            <constraint firstItem="9rV-hA-tP2" firstAttribute="top" secondItem="Ptb-mZ-wF6" secondAttribute="bottom" id="KsE-sx-5ss"/>
+                            <constraint firstItem="Tec-iN-Ad0" firstAttribute="leading" secondItem="4qC-EC-dhR" secondAttribute="leading" constant="-1" id="T0f-5i-ceF"/>
+                            <constraint firstAttribute="trailing" secondItem="Tec-iN-Ad0" secondAttribute="trailing" constant="-1" id="VaW-hU-cnu"/>
                             <constraint firstItem="Vfi-st-4Ne" firstAttribute="leading" secondItem="4qC-EC-dhR" secondAttribute="leading" id="W4g-dW-gCa"/>
-                            <constraint firstAttribute="bottom" secondItem="Ptb-mZ-wF6" secondAttribute="bottom" id="hZd-kj-AcF"/>
                             <constraint firstItem="Vfi-st-4Ne" firstAttribute="top" secondItem="4qC-EC-dhR" secondAttribute="top" id="m48-Xs-wJs"/>
+                            <constraint firstAttribute="bottom" secondItem="9rV-hA-tP2" secondAttribute="bottom" constant="1" id="nJI-DQ-qad"/>
                             <constraint firstAttribute="trailing" secondItem="Ptb-mZ-wF6" secondAttribute="trailing" id="noB-yF-d8A"/>
                         </constraints>
                     </view>
@@ -1310,6 +1337,7 @@ Version 1.0.0</string>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
                         <outlet property="avatarImageView" destination="c98-TQ-lrM" id="1L9-lS-roZ"/>
+                        <outlet property="bottomInformationLabel" destination="Tec-iN-Ad0" id="iAT-0V-Vuh"/>
                         <outlet property="tableView" destination="Ptb-mZ-wF6" id="LQB-ZB-E7x"/>
                         <outlet property="titleLabel" destination="7tN-X6-rqR" id="4K1-Fg-EYu"/>
                     </connections>
@@ -1322,8 +1350,8 @@ Version 1.0.0</string>
     <resources>
         <image name="avatar" width="70" height="70"/>
         <image name="avatar_empty" width="35" height="35"/>
+        <image name="avatar_white_empty" width="35" height="35"/>
         <image name="background_gradient" width="1" height="1136"/>
-        <image name="bordered_logo" width="54" height="54"/>
         <image name="button_pause" width="108" height="43"/>
         <image name="button_pause_pressed" width="108" height="43"/>
         <image name="button_rerecord" width="108" height="43"/>
@@ -1340,6 +1368,7 @@ Version 1.0.0</string>
         <image name="icon_close" width="14" height="14"/>
         <image name="icon_down" width="6" height="6"/>
         <image name="icon_menu" width="16" height="14"/>
+        <image name="icon_mic_2" width="30" height="30"/>
         <image name="icon_peppermint" width="188" height="188"/>
         <image name="icon_recent" width="14" height="14"/>
         <image name="phone_active" width="20" height="20"/>
