--- a/Peppermint/ChatTableViewCell.xib
+++ b/Peppermint/ChatTableViewCell.xib
@@ -86,18 +86,28 @@
                             <constraint firstAttribute="width" constant="14" id="puC-5q-xDM"/>
                         </constraints>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RDh-gW-uQJ">
+                        <rect key="frame" x="0.0" y="0.0" width="448" height="59"/>
+                        <connections>
+                            <action selector="playPauseButtonPressed:" destination="0hh-73-Plp" eventType="touchUpInside" id="cf8-Zk-qDn"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <color key="backgroundColor" red="1" green="0.39276204549999999" blue="0.95142387949999996" alpha="1" colorSpace="calibratedRGB"/>
                 <gestureRecognizers/>
                 <constraints>
                     <constraint firstItem="DRh-1G-YWR" firstAttribute="centerY" secondItem="JSg-5m-bvD" secondAttribute="centerY" id="5dG-ke-zje"/>
                     <constraint firstItem="gwE-ca-PTN" firstAttribute="centerY" secondItem="JSg-5m-bvD" secondAttribute="centerY" id="9C0-EO-xXa"/>
+                    <constraint firstAttribute="bottom" secondItem="RDh-gW-uQJ" secondAttribute="bottom" id="DX5-qj-dcA"/>
                     <constraint firstItem="DRh-1G-YWR" firstAttribute="centerY" secondItem="Bxj-xB-dM6" secondAttribute="centerY" id="J2a-p8-QYc"/>
                     <constraint firstItem="JSg-5m-bvD" firstAttribute="leading" secondItem="Bxj-xB-dM6" secondAttribute="leading" priority="750" constant="8" id="Uhy-dT-uh8"/>
+                    <constraint firstItem="RDh-gW-uQJ" firstAttribute="top" secondItem="Bxj-xB-dM6" secondAttribute="top" id="Ym8-6P-atY"/>
                     <constraint firstItem="JSg-5m-bvD" firstAttribute="centerY" secondItem="Bxj-xB-dM6" secondAttribute="centerY" id="cSb-8n-fWm"/>
                     <constraint firstItem="gwE-ca-PTN" firstAttribute="leading" secondItem="DRh-1G-YWR" secondAttribute="trailing" id="dq0-Z8-lfv"/>
+                    <constraint firstItem="RDh-gW-uQJ" firstAttribute="leading" secondItem="Bxj-xB-dM6" secondAttribute="leading" id="hsc-lL-1Kw"/>
                     <constraint firstItem="gwE-ca-PTN" firstAttribute="centerY" secondItem="Bxj-xB-dM6" secondAttribute="centerY" id="imw-N6-7cz"/>
                     <constraint firstItem="DRh-1G-YWR" firstAttribute="leading" secondItem="JSg-5m-bvD" secondAttribute="trailing" id="jhT-JK-UvG"/>
+                    <constraint firstAttribute="trailing" secondItem="RDh-gW-uQJ" secondAttribute="trailing" id="qbd-pM-Avg"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -119,6 +129,6 @@
     <resources>
         <image name="icon_chat_left_connected" width="9" height="33"/>
         <image name="icon_chat_left_flat" width="9" height="33"/>
-        <image name="icon_play" width="10" height="10"/>
+        <image name="icon_play" width="11" height="15"/>
     </resources>
 </document>
